# FD2D_Elastic_and_viscoacoustic

./: CMakeLists.txt  README.md  main.f90  read_acqui.f90  readmodelfiles.f90  ricker.f90
FD2D_elastic/: create2Dmodel_files.f90  main.f90
FD2D_viscoacoustic/: main.f90
FD2D_viscoacoustic/run/: build_and_run.sh  check.m  create2Dmodel_files  create2Dmodel_files.f90  fd2Dvacrun.sh  parameters.in  testing_qf  testing_rho
FD2D_viscoacoustic/run/OUTPUT/: animate.m  seism_P_00001
FD2D_viscoacoustic/src/: FD2DVAC.f90  Makefile  Makefile.inc  read_acqui.f90  read_acqui.mod  readmodelfiles.f90  ricker.f90
